--- a/ci/cloudbuild.yaml
+++ b/ci/cloudbuild.yaml
@@ -1,5 +1,5 @@
 steps:
-    - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+    - name: 'asia.gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: 'bash'
     args:
         - '-c'
